@@ -1,3 +1,14 @@
+What's new in ZODB3 3.7.0?
+==========================
+Release date: ???
+
+BTrees
+------
+
+- Support for 64-bit integer keys and values has been provided as a
+  compile-time option.
+
+
 What's new in ZODB3 3.6.2?
 ==========================
 Release date: 15-July-2006
